--- a/style.css
+++ b/style.css
@@ -8,17 +8,17 @@ h1 {
     text-align: center;
 }
 
-.imagem{
-    width: 40%;
-    margin-left: 9%;
+.imagem {
+    width: 30%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 .ferido { 
-    width: 40%;
-    margin-left: 25%;
+    width: 30% ;
+    margin-left: 30%
 }
 
 .alistamento{
-    width: 40%;
-margin-left: 25%;}
-
+    width: 30%;
+margin-left: 30%;}
