--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body{
+      
+  body{
     background-color: rgb(142, 161, 112);
 
 }
@@ -22,3 +23,6 @@ h1 {
 .alistamento{
     width: 30%;
 margin-left: 30%;}
+
+.logo { height: 20%;
+width: 100%;}
